--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.9",
     "expo": "~47.0.8",
     "expo-camera": "~13.1.0",
     "expo-image-picker": "~14.0.2",
@@ -21,6 +24,10 @@
     "react": "18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
     "tailwindcss": "^3.2.4",
     "tailwindcss-react-native": "^1.7.10"
